# knowledge_base_agent

./: pyproject.toml
knowledge_base_agent/: run.py  schemas.py
knowledge_base_agent/configs/: deployment.json  kb_deployments.json
